--- a/ML2/deployment-flask/app/templates/dashboard.html
+++ b/ML2/deployment-flask/app/templates/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}HospitalApp{% endblock %}
+{% block title %}Adult Concensus App{% endblock %}
 
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
@@ -12,7 +12,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url_for('index') }}">HospitalApp</a>
+            <a class="navbar-brand" href="{{ url_for('index') }}">Adult Concensus App</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -29,12 +29,13 @@
 {% block content %}
 <div class='container'>
     <div class='page-header'>
-        <h1>Welcome to the dashboard!</h1>
+        <h1>Info</h1>
     </div>
 </div>
 
 <div class='container'>
-        <h3><em>TO BE ADDED</em></h3>
+        <h3><em>Velkommen til webapplikasjonen som predikerer om du tjener mer eller mindre enn 50k dollar i året.</em></h3>
+        <h3><em>Sjekk ut kildekoden på: https://github.com/577854/final/tree/master</em></h3>
 
     </div>    
 {% endblock %}
